--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,16 @@
 #################
+## Vim
+#################
+
+*.swp
+
+#################
+## node
+#################
+
+node_modules
+
+#################
 ## Eclipse
 #################
 
