--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "grunt-contrib-concat": "~0.1.3",
     "grunt-contrib-uglify": "~0.1.2",
     "grunt-angular-templates": "~0.3.0",
-    "grunt-contrib-clean": "~0.4.0"
+    "grunt-contrib-clean": "~0.4.0",
+    "grunt-contrib-jasmine": "~0.3.3"
   }
 }
