--- a/package.json
+++ b/package.json
@@ -25,12 +25,13 @@
   "author": "ng-grid Team",
   "license": "MIT",
   "devDependencies": {
-    "grunt": "~0.4.0",
+    "grunt": "~0.4.1",
     "grunt-jsdoc": "~0.2.4",
     "grunt-contrib-concat": "~0.1.3",
     "grunt-contrib-uglify": "~0.1.2",
     "grunt-angular-templates": "~0.3.0",
     "grunt-contrib-clean": "~0.4.0",
-    "grunt-contrib-jasmine": "~0.3.3"
+    "grunt-contrib-jasmine": "~0.3.3",
+    "grunt-cli": "~0.1.7"
   }
 }
