--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "grunt-angular-templates": "~0.3.0",
     "grunt-contrib-clean": "~0.4.0",
     "grunt-contrib-jasmine": "~0.3.3",
-    "grunt-cli": "~0.1.7"
+    "grunt-cli": "~0.1.7",
+    "grunt-contrib-cssmin": "~0.6.0",
+    "grunt-contrib-copy": "~0.4.0"
   }
 }
