--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "license": "MIT",
   "devDependencies": {
     "grunt": "~0.4.1",
+    "grunt-cli": "~0.1.7",
     "grunt-jsdoc": "~0.2.4",
     "grunt-karma": "~0.4.4",
     "grunt-contrib-watch": "~0.3.1",
@@ -34,6 +35,6 @@
     "grunt-angular-templates": "~0.3.0",
     "grunt-contrib-clean": "~0.4.0",
     "grunt-contrib-jasmine": "~0.3.3",
-    "grunt-cli": "~0.1.7"
+    "grunt-contrib-less": "~0.5.1"
   }
 }
