--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "grunt-angular-templates": "~0.3.0",
     "grunt-contrib-clean": "~0.4.0",
     "grunt-contrib-jasmine": "~0.3.3",
-    "grunt-contrib-less": "~0.5.1"
+    "grunt-contrib-less": "~0.5.1",
+    "grunt-contrib-jshint": "~0.5.4"
   }
 }
