--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "grunt-contrib-clean": "~0.4.0",
     "grunt-contrib-jasmine": "~0.3.3",
     "grunt-contrib-less": "~0.5.1",
-    "grunt-contrib-jshint": "~0.5.4"
+    "grunt-contrib-jshint": "~0.5.4",
+    "grunt-regex-replace": "~0.2.5"
   }
 }
