--- a/package.json
+++ b/package.json
@@ -25,25 +25,26 @@
   "author": "ui-grid Team",
   "license": "MIT",
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-uglify": "~0.2.7",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-contrib-jasmine": "~0.5.2",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-jshint": "~0.7.1",
-    "grunt-contrib-less": "~0.8.2",
-    "grunt-angular-templates": "~0.4.7",
-    "grunt-contrib-connect": "~0.5.0",
-    "karma-script-launcher": "~0.1.0",
-    "karma-firefox-launcher": "~0.1.0",
-    "karma-html2js-preprocessor": "~0.1.0",
-    "karma-chrome-launcher": "~0.1.0",
-    "karma-requirejs": "~0.1.0",
-    "karma-jasmine": "~0.1.3",
-    "karma-coffee-preprocessor": "~0.1.0",
-    "karma-phantomjs-launcher": "~0.1.0",
-    "karma": "~0.10.5",
-    "grunt-karma": "~0.6.2"
+    "grunt": "~0.4",
+    "grunt-contrib-concat": "~0.3",
+    "grunt-contrib-uglify": "~0.2",
+    "grunt-contrib-watch": "~0.5",
+    "grunt-contrib-jasmine": "~0.5",
+    "grunt-contrib-clean": "~0.5",
+    "grunt-contrib-jshint": "~0.7",
+    "grunt-contrib-less": "~0.8",
+    "grunt-angular-templates": "~0.5",
+    "grunt-contrib-connect": "~0.5",
+    "karma-script-launcher": "~0.1",
+    "karma-firefox-launcher": "~0.1",
+    "karma-html2js-preprocessor": "~0.1",
+    "karma-chrome-launcher": "~0.1",
+    "karma-requirejs": "~0.2",
+    "karma-jasmine": "~0.1",
+    "karma-coffee-preprocessor": "~0.1",
+    "karma-phantomjs-launcher": "~0.1",
+    "karma": "~0.10",
+    "grunt-karma": "~0.6.2",
+    "karma-sauce-launcher": "~0.1.5"
   }
 }
