--- a/.travis.yml
+++ b/.travis.yml
@@ -25,5 +25,7 @@ before_script:
   - npm install karma@canary
   - ./misc/test_lib/sauce/sauce_connect_block.sh
 
+# Run default task first, then CI task(s)
 script:
+  - grunt
   - ./travis_build.sh
