--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,7 @@ branches:
   - /^release-.*$/
 
 before_script:
-- chmod +x ./misc/test_lib/sauce/sauce_connect_setup.sh
-- chmod +x ./misc/test_lib/sauce/sauce_connect_block.sh
+- chmod +x ./misc/test_lib/sauce/sauce_connect_setup.sh ./misc/test_lib/sauce/sauce_connect_block.sh ./travis_build.sh
 - export DISPLAY=:99.0
 - sh -e /etc/init.d/xvfb start
 - mkdir -p $LOGS_DIR
