--- a/.travis.yml
+++ b/.travis.yml
@@ -22,9 +22,9 @@ before_script:
   - sh -e /etc/init.d/xvfb start
   - mkdir -p $LOGS_DIR
   - ./misc/test_lib/sauce/sauce_connect_setup.sh
-  - npm install --quiet -g grunt-cli
+  - npm install --quiet -g grunt-cli karma-cli
   - npm install
-  - npm install -g -f karma@canary
+  # - npm install -g -f karma@canary
   - ./misc/test_lib/sauce/sauce_connect_block.sh
 
 script:
