--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "grunt-ngdocs": "https://github.com/c0bra/grunt-ngdocs/tarball/0.1.7-custom3",
     "grunt-conventional-changelog": "~1.0.0",
     "grunt-gh-pages": "~0.9.0",
-    "semver": "~2.2.1"
+    "semver": "~2.2.1",
+    "shelljs": "~0.2.6",
+    "grunt-contrib-copy": "~0.4.1"
   }
 }
