--- a/.travis.yml
+++ b/.travis.yml
@@ -32,8 +32,8 @@ before_script:
 
 script:
   - grunt
-  - git config credential.helper "store --file=.git/credentials"
-  - echo "https://${GITHUB_NAME}:${GITHUB_PASS}@github.com" > .git/credentials
+  # - git config credential.helper "store --file=.git/credentials"
+  # - echo "https://${GITHUB_NAME}:${GITHUB_PASS}@github.com" > .git/credentials
   - grunt release
 
 after_success:
