WIP: guess travis needs tags

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ branches:
   - /^release-.*$/
 
 before_script:
+  - git fetch --tags
   - chmod +x ./lib/sauce/sauce_connect_setup.sh ./lib/sauce/sauce_connect_block.sh ./travis_build.sh ./travis_print_logs.sh
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
