--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ language: node_js
 node_js:
   - '0.10'
 
+notifications:
+  irc: "chat.freenode.net#ui-grid"
+
 env:
   global:
   - SAUCE_USERNAME=nggrid
