fix(travis): use SauceLabs for e2e tests on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ before_script:
   - ./lib/sauce/sauce_connect_block.sh
 
 script:
-  - ./scripts/travis/travis_build.sh
+  - ./travis_build.sh
 
 after_success:
   - grunt release
