chore(travis): Fix travis releases and e2e tests
Travis doesn't have an "after all matrixes build successfully" option, so
we'll just run serially for now.

- Also fix the ui-grid js file pointing to localhost:9999 absolutely
rather than relatively.
- And up the timeout for Sauce Labs e2e tests to 60 seconds

--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,10 @@ before_script:
   - ./lib/sauce/sauce_connect_block.sh
 
 script:
-  - ./travis_build.sh
+  # - ./travis_build.sh
+  - grunt
+  - grunt test:ci
+  - grunt test:ci:e2e
 
 after_success:
   - grunt release
