fix(travis):  Need only one script command in travis.yml
Otherwise the before_script stuff runs each time, which makes Sauce Labs
angry.

- Also fixed keepAlive options in the protractor runner so it fails the
  job when e2e tests fail

--- a/.travis.yml
+++ b/.travis.yml
@@ -39,10 +39,7 @@ before_script:
   - ./lib/sauce/sauce_connect_block.sh
 
 script:
-  # - ./travis_build.sh
-  - grunt
-  - grunt test:ci
-  - grunt test:e2e:ci
+  - ./travis_build.sh
 
 after_success:
   - grunt release
