--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "tests"
   ],
   "devDependencies": {
-    "google-code-prettify": "~1.0.1"
+    "google-code-prettify": "~1.0.1",
+    "jquery": "~1.8.0"
   }
 }
