Update to newest karma

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "grunt-contrib-less": "~0.8",
     "grunt-angular-templates": "~0.5",
     "grunt-contrib-connect": "~0.5",
-    "karma": "",
+    "karma": "~0.12",
     "karma-jasmine": "~0.1",
     "karma-requirejs": "~0.2",
     "karma-chrome-launcher": "~0.1",
@@ -44,7 +44,7 @@
     "karma-phantomjs-launcher": "~0.1",
     "karma-sauce-launcher": "~0.1.5",
     "karma-script-launcher": "~0.1",
-    "grunt-karma": "~0.6.2",
+    "grunt-karma": "~0.8",
     "marked": "~0.2",
     "grunt-ngdocs": "https://github.com/c0bra/grunt-ngdocs/tarball/0.1.7-custom8",
     "grunt-conventional-changelog": "~1.0.0",
