feat(rowSort): Added row sorting
Also refactored quite a lot of Grid functionality; added rows processors,
menus, etc.

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "grunt-contrib-less": "~0.8",
     "grunt-angular-templates": "~0.5",
     "grunt-contrib-connect": "~0.5",
+    "grunt-fontello": "~0.1",
     "karma": "~0.12",
     "karma-jasmine": "~0.1",
     "karma-requirejs": "~0.2",
@@ -46,7 +47,7 @@
     "karma-script-launcher": "~0.1",
     "grunt-karma": "~0.8",
     "marked": "~0.2",
-    "grunt-ngdocs": "https://github.com/c0bra/grunt-ngdocs/tarball/0.1.7-custom8",
+    "grunt-ngdocs": "https://github.com/c0bra/grunt-ngdocs/tarball/0.1.7-custom10",
     "grunt-conventional-changelog": "~1.0.0",
     "grunt-gh-pages": "~0.9.0",
     "semver": "~2.2.1",
