Update bower.json for 2.0.8 release

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,29 @@
 {
   "name": "ng-grid",
-  "version": "2.0.7",
-  "main": ["./ng-grid.min.css", "./build/ng-grid.min.js"]
+  "version": "2.0.8",
+  "homepage": "https://github.com/angular-ui/ng-grid",
+  "description": "Angular data grid",
+  "keywords": [
+    "angular",
+    "grid"
+  ],
+  "license": "MIT",
+  "main": ["./ng-grid.css", "./build/ng-grid.js"],
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "config",
+    "lib",
+    "scripts",
+    "src",
+    "test",
+    "workbench",
+    "conf.js",
+    "GruntFile.js"
+  ],
+  "dependencies": {
+    "jquery": "^1.8.0",
+    "angularjs": "^1.0.8"
+  }
 }
