--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "grunt-protractor-runner": "0.2.0",
     "grunt-shell-spawn": "~0.3.0",
     "selenium-webdriver": "~2.39.0",
-    "grunt-jscs-checker": "^0.4.1"
+    "grunt-jscs-checker": "^0.4.1",
+    "jshint-stylish": "^0.2.0"
   }
 }
