--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "license": "MIT",
   "devDependencies": {
     "grunt": "~0.4",
-    "bower": "~1.2.2",
+    "bower": "^1.3.8",
     "grunt-contrib-concat": "~0.3",
     "grunt-contrib-uglify": "~0.2",
     "grunt-contrib-watch": "~0.5",
