--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,12 @@ node_js:
 
 notifications:
   irc: "chat.freenode.net#ui-grid"
+  webhooks:
+    urls:
+      - https://webhooks.gitter.im/e/6bdd30ec5170687c7d77
+    on_success: change  # options: [always|never|change] default: always
+    on_failure: always  # options: [always|never|change] default: always
+    on_start: false     # default: false
 
 env:
   # matrix:
