Added lodash to test run. Temporarily checked in broken tests with an xdescribe. Added unit tests for pinnable column.

--- a/.gitignore
+++ b/.gitignore
@@ -189,7 +189,12 @@ pip-log.txt
 ## JetBrains
 #################
 .idea
+ng-grid.iml
 
+
+#################
+## other stuff
+#################
 Sauce-Connect.jar
 *.log
 docs
