--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
   ],
   "devDependencies": {
     "google-code-prettify": "~1.0.2",
-    "jquery": "~1.8.0"
+    "jquery": "~1.8.0",
+    "lodash": "~2.4.1"
   }
 }
