--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "google-code-prettify": "~1.0.2",
     "jquery": "~1.8.0",
-    "lodash": "~2.4.1"
+    "lodash": "~2.4.1",
+    "pdfmake": "~0.1.8"
   }
 }
