--- a/src/font/config.json
+++ b/src/font/config.json
@@ -7,100 +7,118 @@
   "ascent": 850,
   "glyphs": [
     {
+      "uid": "1a5cfa186647e8c929c2b17b9fc4dac1",
+      "css": "plus-squared",
+      "code": 50000,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "f755a58fb985eeb70bd47d9b31892a34",
+      "css": "minus-squared",
+      "code": 50001,
+      "src": "fontawesome"
+    },
+    {
       "uid": "9dd9e835aebe1060ba7190ad2b2ed951",
       "css": "search",
-      "code": 59407,
+      "code": 50002,
       "src": "fontawesome"
     },
     {
       "uid": "5211af474d3a9848f67f945e2ccaf143",
       "css": "cancel",
-      "code": 59400,
+      "code": 50003,
       "src": "fontawesome"
     },
     {
       "uid": "e82cedfa1d5f15b00c5a81c9bd731ea2",
       "css": "info-circled",
-      "code": 59406,
+      "code": 50004,
       "src": "fontawesome"
     },
     {
       "uid": "c1f1975c885aa9f3dad7810c53b82074",
       "css": "lock",
-      "code": 59395,
+      "code": 50005,
       "src": "fontawesome"
     },
     {
       "uid": "657ab647f6248a6b57a5b893beaf35a9",
       "css": "lock-open",
-      "code": 59396,
+      "code": 50006,
       "src": "fontawesome"
     },
     {
       "uid": "d35a1d35efeb784d1dc9ac18b9b6c2b6",
       "css": "pencil",
-      "code": 59401,
+      "code": 50007,
       "src": "fontawesome"
     },
     {
       "uid": "2d6150442079cbda7df64522dc24f482",
       "css": "down-dir",
-      "code": 59403,
+      "code": 50008,
       "src": "fontawesome"
     },
     {
       "uid": "80cd1022bd9ea151d554bec1fa05f2de",
       "css": "up-dir",
-      "code": 59402,
+      "code": 50009,
       "src": "fontawesome"
     },
     {
       "uid": "9dc654095085167524602c9acc0c5570",
       "css": "left-dir",
-      "code": 59399,
+      "code": 50010,
       "src": "fontawesome"
     },
     {
       "uid": "fb1c799ffe5bf8fb7f8bcb647c8fe9e6",
       "css": "right-dir",
-      "code": 59405,
+      "code": 50011,
       "src": "fontawesome"
     },
     {
       "uid": "d870630ff8f81e6de3958ecaeac532f2",
       "css": "left-open",
-      "code": 59398,
+      "code": 50012,
       "src": "fontawesome"
     },
     {
       "uid": "399ef63b1e23ab1b761dfbb5591fa4da",
       "css": "right-open",
-      "code": 59397,
+      "code": 50013,
       "src": "fontawesome"
     },
     {
       "uid": "e4dde1992f787163e2e2b534b8c8067d",
       "css": "angle-down",
-      "code": 59404,
+      "code": 50014,
       "src": "fontawesome"
     },
     {
       "uid": "4109c474ff99cad28fd5a2c38af2ec6f",
       "css": "filter",
-      "code": 59392,
+      "code": 50015,
       "src": "fontawesome"
     },
     {
       "uid": "0cd2582b8c93719d066ee0affd02ac78",
       "css": "sort-alt-up",
-      "code": 59393,
+      "code": 50016,
       "src": "fontawesome"
     },
     {
       "uid": "27b13eff5eb0ca15e01a6e65ffe6eeec",
       "css": "sort-alt-down",
-      "code": 59394,
+      "code": 50017,
       "src": "fontawesome"
+    },
+    {
+      "uid": "5d2d07f112b8de19f2c0dbfec3e42c05",
+      "css": "spin5",
+      "code": 60001,
+      "src": "fontelico"
     }
   ]
 }
