--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ui-grid",
-  "version": "3.0.0-rc.1",
+  "version": "v3.0.0-rc.2",
   "description": "__Contributors:__",
   "directories": {
     "test": "test"
