Fix #1828 enh(importer): move to csv-js library, fix apply Move to csv-js library, more standards compliant and configurable. Requires bower install before can be used, noted in tutorial.
Fix #1828, wasn't rendering as needed $scope.$apply.

--- a/bower.json
+++ b/bower.json
@@ -26,6 +26,7 @@
     "google-code-prettify": "~1.0.2",
     "jquery": "~1.8.0",
     "lodash": "~2.4.1",
-    "pdfmake": "~0.1.8"
+    "pdfmake": "~0.1.8",
+    "csv-js": "*"
   }
 }
