--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "shelljs": "~0.2.6",
     "grunt-contrib-copy": "~0.4.1",
     "protractor": "~1.0.0",
-    "grunt-protractor-runner": "0.2.0",
+    "grunt-protractor-runner": "~1.1.4",
     "grunt-shell-spawn": "~0.3.0",
     "selenium-webdriver": "~2.39.0",
     "grunt-jscs": "^0.7.1",
