--- a/.travis.yml
+++ b/.travis.yml
@@ -33,9 +33,9 @@ branches:
   - /^release-.*$/
 
 before_install:
-  - export CHROME_BIN=chromium-browser
-  - export DISPLAY=:99.0
-  - sh -e /etc/init.d/xvfb start
+  - "export CHROME_BIN=chromium-browser"
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
 
 before_script:
   - echo "TRAVIS_PULL_REQUEST $TRAVIS_PULL_REQUEST ${TRAVIS_PULL_REQUEST}"
