--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-ui-grid",
-  "version": "3.0.0-RC.18",
+  "version": "3.0.0-rc.19",
   "homepage": "http://ui-grid.info",
   "repository": {
     "type": "git",
