--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "karma-requirejs": "~0.2",
     "karma-chrome-launcher": "~0.1",
     "karma-firefox-launcher": "~0.1",
+    "karma-ie-launcher": "^0.1.5",
     "karma-phantomjs-launcher": "~0.1",
     "karma-sauce-launcher": "~0.2.10",
     "karma-script-launcher": "~0.1",
