Update grid to latest release

--- a/bower.json
+++ b/bower.json
@@ -28,5 +28,8 @@
     "lodash": "~2.4.1",
     "pdfmake": "~0.1.8",
     "csv-js": "https://github.com/c0bra/CSV-JS.git#~1.0.2"
+  },
+  "dependencies": {
+    "angular-ui-grid": "~3.0.0-rc.20"
   }
 }
