--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "test",
     "tests"
   ],
+  "main": ["./ui-grid.css", "./ui-grid.js"],
   "devDependencies": {
     "google-code-prettify": "~1.0.2",
     "jquery": "~1.8.0",
