--- a/package.json
+++ b/package.json
@@ -27,47 +27,47 @@
   "author": "UI Grid Team",
   "license": "MIT",
   "devDependencies": {
+    "grunt": "~0.4",
     "bower": "^1.3.8",
-    "coveralls": "^2.11.1",
-    "grunt": "^0.4.5",
-    "grunt-angular-templates": "~0.5",
-    "grunt-bump": "0.0.15",
-    "grunt-contrib-clean": "~0.5",
     "grunt-contrib-concat": "~0.3",
-    "grunt-contrib-connect": "~0.5",
-    "grunt-contrib-copy": "~0.4.1",
-    "grunt-contrib-jasmine": "~0.5",
-    "grunt-contrib-jshint": "~0.7",
-    "grunt-contrib-less": "~1.0",
     "grunt-contrib-uglify": "~0.2",
     "grunt-contrib-watch": "~0.5",
-    "grunt-conventional-changelog": "~1.0.0",
+    "grunt-contrib-jasmine": "~0.5",
+    "grunt-contrib-clean": "~0.5",
+    "grunt-contrib-jshint": "~0.7",
+    "grunt-contrib-less": "~1.0",
+    "grunt-angular-templates": "~0.5",
+    "grunt-contrib-connect": "~0.5",
     "grunt-fontello": "~0.1",
-    "grunt-gh-pages": "~0.9.0",
-    "grunt-jscs": "^0.7.1",
-    "grunt-karma": "~0.8",
-    "grunt-newer": "~1.1.0",
-    "grunt-ngdocs": "https://github.com/c0bra/grunt-ngdocs/tarball/0.1.7-custom19",
-    "grunt-protractor-runner": "~2.0.0",
-    "grunt-shell-spawn": "~0.3.0",
-    "jit-grunt": "^0.8.0",
-    "jshint-stylish": "^0.2.0",
     "karma": "~0.12",
+    "karma-jasmine": "~0.1",
+    "karma-requirejs": "~0.2",
     "karma-chrome-launcher": "~0.1",
-    "karma-coverage": "^0.2.5",
     "karma-firefox-launcher": "~0.1",
     "karma-ie-launcher": "^0.1.5",
-    "karma-jasmine": "~0.1",
     "karma-phantomjs-launcher": "~0.1",
-    "karma-requirejs": "~0.2",
     "karma-sauce-launcher": "~0.2.10",
     "karma-script-launcher": "~0.1",
-    "load-grunt-config": "~0.16.0",
+    "grunt-karma": "~0.8",
     "marked": "~0.2",
-    "protractor": "~2.1.0",
-    "selenium-webdriver": "~2.44.0",
+    "grunt-ngdocs": "https://github.com/c0bra/grunt-ngdocs/tarball/0.1.7-custom19",
+    "grunt-conventional-changelog": "~1.0.0",
+    "grunt-gh-pages": "~0.9.0",
     "semver": "~2.2.1",
     "shelljs": "~0.2.6",
-    "time-grunt": "~1.1.0"
+    "grunt-contrib-copy": "~0.4.1",
+    "protractor": "~2.1.0",
+    "grunt-protractor-runner": "~2.0.0",
+    "grunt-shell-spawn": "~0.3.0",
+    "selenium-webdriver": "~2.44.0",
+    "grunt-jscs": "^0.7.1",
+    "jshint-stylish": "^0.2.0",
+    "karma-coverage": "^0.2.5",
+    "coveralls": "^2.11.1",
+    "jit-grunt": "^0.8.0",
+    "grunt-bump": "0.0.15",
+    "load-grunt-config": "~0.16.0",
+    "time-grunt": "~1.1.0",
+    "grunt-newer": "~1.1.0"
   }
 }
