--- a/.travis.yml
+++ b/.travis.yml
@@ -12,24 +12,24 @@ notifications:
     on_start: false     # default: false
 
 env:
-  # matrix:
-  #   - JOB=unit
-  #   - JOB=e2e
+  matrix:
+    - JOB=unit
+    - JOB=e2e
   global:
-  - SAUCE_USERNAME=nggrid
-  - SAUCE_CONNECT_READY_FILE=/tmp/sauce-connect-ready
-  - LOGS_DIR=/tmp/angular-build/logs
-  - secure: PEQFPTi8DRVrj6dEl6tQ+QTI07N8A3XST9eu5uHyW9YuDErDpn6rE8iEI2bd6nU5jldF9cCaGprpEi6aTP71jxFkm2Yjk1PRxtSVo5Cvu7sEwaFOnZi2KBgpKAdv8T3GB4rcjePe3oPwSkw1i/s9THSe18KSzZdgwP2LMctlCyA=
-  - secure: A4ur05WzvEsExKuAR81MmxNldgYbpc8VwI/9hC2v+IWAAaFClWDH6OdlbfO8gNaWJVnLmvMS8emA7zkBuKgQhuMP0u8RoSwn7TOObaCICEM7mbFPRwCX1td0/4FyUdUUAE/jw3Cx4SBdrb0qGkMmdg36W4II1BBzkMnJblUfnNU=
-  - secure: W2QpRQppqS1wMhbiOTOzJmaUXZtjUQdoWj+IKuyX6m7/A2A4YDXfNj+vzXfffbVqnBFDzrYRtcZ6IMmHn9QDs4gJaAaQDc1104UEd/sbVEujDn+9YOE3tTdRLE13FgdwwrLNcpypiPZ+rpWvEizRAlwoMXIiVhL8pUc1hysX9qM=
-  - secure: IaTLpsLUet/9al3Lg9n1k+M+5zIEnCwx7fwOjNoUmHYrYRImDUVmtymb9HSdzozn8cV1z+k6V62wghjK0b8c5tZ0mE9PRtEN8Nv1CjVmrbURpQaypC2A1HT3xg3/MDRwvAoiHILPxTo4k5jw1wgNrYKxCLbb7vmvoPwVv7seTT8=
-  - secure: PWz5cYdlrucjbJxUj9WUGo55V8+z/fDST7ihx9uLuhllqaQ+fkdTX5ccn8sv+dp9OPs0ov3Gunv/GIWKB3E6HCsHQJsyZ1Tde3IvyWwz72YeQ5/IZVolX0T1dmX9sLYJxqKjO1/D/Zfj4NkCEjFQmyIB+47tgBTV1OA9h/4TiMk=
+    - SAUCE_USERNAME=nggrid
+    - SAUCE_CONNECT_READY_FILE=/tmp/sauce-connect-ready
+    - LOGS_DIR=/tmp/angular-build/logs
+    - secure: PEQFPTi8DRVrj6dEl6tQ+QTI07N8A3XST9eu5uHyW9YuDErDpn6rE8iEI2bd6nU5jldF9cCaGprpEi6aTP71jxFkm2Yjk1PRxtSVo5Cvu7sEwaFOnZi2KBgpKAdv8T3GB4rcjePe3oPwSkw1i/s9THSe18KSzZdgwP2LMctlCyA=
+    - secure: A4ur05WzvEsExKuAR81MmxNldgYbpc8VwI/9hC2v+IWAAaFClWDH6OdlbfO8gNaWJVnLmvMS8emA7zkBuKgQhuMP0u8RoSwn7TOObaCICEM7mbFPRwCX1td0/4FyUdUUAE/jw3Cx4SBdrb0qGkMmdg36W4II1BBzkMnJblUfnNU=
+    - secure: W2QpRQppqS1wMhbiOTOzJmaUXZtjUQdoWj+IKuyX6m7/A2A4YDXfNj+vzXfffbVqnBFDzrYRtcZ6IMmHn9QDs4gJaAaQDc1104UEd/sbVEujDn+9YOE3tTdRLE13FgdwwrLNcpypiPZ+rpWvEizRAlwoMXIiVhL8pUc1hysX9qM=
+    - secure: IaTLpsLUet/9al3Lg9n1k+M+5zIEnCwx7fwOjNoUmHYrYRImDUVmtymb9HSdzozn8cV1z+k6V62wghjK0b8c5tZ0mE9PRtEN8Nv1CjVmrbURpQaypC2A1HT3xg3/MDRwvAoiHILPxTo4k5jw1wgNrYKxCLbb7vmvoPwVv7seTT8=
+    - secure: PWz5cYdlrucjbJxUj9WUGo55V8+z/fDST7ihx9uLuhllqaQ+fkdTX5ccn8sv+dp9OPs0ov3Gunv/GIWKB3E6HCsHQJsyZ1Tde3IvyWwz72YeQ5/IZVolX0T1dmX9sLYJxqKjO1/D/Zfj4NkCEjFQmyIB+47tgBTV1OA9h/4TiMk=
 
 branches:
   only:
-  - master
-  - /^3\.0$/
-  - /^release-.*$/
+    - master
+    - /^3\.0$/
+    - /^release-.*$/
 
 before_install:
   - "export CHROME_BIN=chromium-browser"
