--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ui-grid",
   "version": "3.0.0-rc.22",
-  "description": "__Contributors:__",
+  "description": "A data grid for Angular",
   "directories": {
     "test": "test"
   },
