Adds twitter bootstrap less files under a namespace
This allows the twitter bootstrap less elements to be used inside of
ui-grid without causing naming conflicts.
Bootstrap less components only get imported if they are used in the less files.

--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
   ],
   "author": "UI Grid Team",
   "license": "MIT",
+  "dependencies": {
+    "bootstrap": "~3.3.5"
+  },
   "devDependencies": {
     "bower": "^1.3.8",
     "canonical-path": "0.0.2",
