--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "angular-ui-grid",
-  "version": "3.0.0-rc.22",
+  "name": "bam-angular-ui-grid",
+  "version": "3.0.0-rc.22-bam",
   "homepage": "http://ui-grid.info",
   "repository": {
     "type": "git",
