--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,10 @@
 {
   "name": "bam-angular-ui-grid",
-  "version": "3.0.0-rc.22-bam",
+  "version": "3.0.0-rc.22-3804",
   "homepage": "http://ui-grid.info",
   "repository": {
     "type": "git",
-    "url": "https://github.com/angular-ui/ui-grid.info.git"
+    "url": "https://github.com/baart/ui-grid.info.git"
   },
   "authors": [
     "__Contributors__"
@@ -20,7 +20,12 @@
     "node_modules",
     "bower_components",
     "test",
-    "tests"
+    "tests",
+    "design",
+    "grunt",
+    "lib",
+    "misc",
+    "src"
   ],
   "main": ["./ui-grid.css", "./ui-grid.js"],
   "devDependencies": {
