Using glyphs for pagination buttons

--- a/src/font/config.json
+++ b/src/font/config.json
@@ -115,6 +115,24 @@
       "src": "fontawesome"
     },
     {
+      "uid": "ce06b5805120d0c2f8d60cd3f1a4fdb5",
+      "css": "play",
+      "code": 59397,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "c47efa0e3e74f6ba4c2562c1258fff1f",
+      "css": "to-end",
+      "code": 59395,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "12052b30d23a1a70d6b32962d5464cae",
+      "css": "to-start",
+      "code": 59396,
+      "src": "fontawesome"
+    },
+    {
       "uid": "594e9271c08ff732c04b3bf3117b9040",
       "css": "indent-left",
       "code": 59392,
